@@ -1,36 +1,30 @@
-#!perl
+#!perl -Tw
 
 use strict;
 use warnings;
-use Test::More tests => 3;
+use Test::More tests => 4;
+use URI::file;
 
 BEGIN {
     use_ok( 'Test::WWW::Mechanize' );
 }
 
-
-use lib 't';
-use TestServer;
-
-my $server      = TestServer->new;
-my $pid         = $server->background;
-my $server_root = $server->root;
-
 my $mech = Test::WWW::Mechanize->new();
 isa_ok($mech,'Test::WWW::Mechanize');
 
-$mech->get("$server_root/manylinks.html");
+my $uri = URI::file->new_abs( 't/manylinks.html' )->as_string;
+$mech->get_ok( $uri );
 
 # Good links.
 my @links = $mech->followable_links();
 @links = map { $_->url_abs } @links;
 my @expected = (
-    "$server_root/goodlinks.html",
+    URI::file->new_abs( 't/goodlinks.html' )->as_string,
     'http://bongo.com/wang.html',
     'https://secure.bongo.com/',
-    "$server_root/badlinks.html",
-    "$server_root/goodlinks.html",
+    URI::file->new_abs( 't/badlinks.html' )->as_string,
+    URI::file->new_abs( 't/goodlinks.html' )->as_string,
 );
 is_deeply( \@links, \@expected, 'Got the right links' );
 
-$server->stop;
+done_testing();
