@@ -1,25 +1,20 @@
-#!perl -w
+#!perl -Tw
 
 use strict;
 use warnings;
-use Test::More tests => 7;
+use Test::More tests => 8;
 use Test::Builder::Tester;
+use URI::file;
 
 BEGIN {
     use_ok( 'Test::WWW::Mechanize' );
 }
 
-use lib 't';
-use TestServer;
-
-my $server      = TestServer->new;
-my $pid         = $server->background;
-my $server_root = $server->root;
-
 my $mech = Test::WWW::Mechanize->new;
 isa_ok($mech,'Test::WWW::Mechanize');
 
-$mech->get( "$server_root/goodlinks.html" );
+my $uri = URI::file->new_abs( 't/goodlinks.html' )->as_string;
+$mech->get_ok( $uri );
 
 test_out( 'ok 1 - looking for "Test" link' );
 $mech->has_tag( h1 => 'Test Page', 'looking for "Test" link' );
@@ -44,4 +39,4 @@ test_fail( +1 );
 $mech->has_tag_like( a => qr/goof/i, 'Should be missing qr/goof/i link' );
 test_test( 'Handles unfindable tag by content regexp' );
 
-$server->stop;
+done_testing();
