@@ -1,13 +1,0 @@
-<html>
-  <head>
-    <title>Test Page</title>
-  </head>
-  <body>
-    Test Page
-    <a href='goodlinks.html'>good</a>
-    <a href='bad1.html'>Test</a>
-    <a href='bad2.html'>Test</a>
-    <a href='bad3.html'>Test</a>
-  </body>
-</html>
-
