@@ -1,0 +1,12 @@
+<html>
+    <head>
+        <title>Test Page</title>
+    </head>
+    <body>
+        <h1>Test Page</h1>
+        <a href="goodlinks.html">Test 1</a>
+        <a href="badlinks.html">Test 2</a>
+        <a href="goodlinks.html">Test 3</a>
+    </body>
+</html>
+
