@@ -1,28 +1,25 @@
-#!perl
+#!perl -Tw
 
 use strict;
 use warnings;
-use Test::More tests => 7;
+use Test::More tests => 10;
 use Test::Builder::Tester;
+use URI::file;
 
 BEGIN {
     use_ok( 'Test::WWW::Mechanize' );
 }
 
-use lib 't';
-use TestServer;
-
-my $server      = TestServer->new;
-my $pid         = $server->background;
-my $server_root = $server->root;
 
 my $mech=Test::WWW::Mechanize->new( autocheck => 0 );
 isa_ok($mech,'Test::WWW::Mechanize');
 
-
 # Good links.
-$mech->get( "$server_root/goodlinks.html" );
+my $uri = URI::file->new_abs( 't/goodlinks.html' )->as_string;
+$mech->get_ok( $uri );
+
 my $links = $mech->links();
+is( @{$links}, 3, 'got three links' );
 test_out('ok 1 - Checking all links successful');
 $mech->links_ok($links,'Checking all links successful');
 test_test('Handles All Links successful');
@@ -32,7 +29,8 @@ $mech->links_ok('goodlinks.html','Specified link');
 $mech->links_ok([qw(goodlinks.html badlinks.html)],'Specified link list');
 
 # Bad links
-$mech->get( "$server_root/badlinks.html" );
+$uri = URI::file->new_abs( 't/badlinks.html' )->as_string;
+$mech->get_ok( $uri );
 
 $links=$mech->links();
 test_out('not ok 1 - Checking all links some bad');
@@ -49,4 +47,4 @@ test_diag('test2.html');
 $mech->links_ok('test2.html','Checking specified link not found');
 test_test('Handles link not found');
 
-$server->stop;
+done_testing();
