@@ -1,25 +1,22 @@
-#!perl
+#!perl -Tw
 
 use strict;
 use warnings;
-use Test::More tests => 9;
+use Test::More tests => 10;
 use Test::Builder::Tester;
+use URI::file;
 
 BEGIN {
     use_ok( 'Test::WWW::Mechanize' );
 }
 
 use lib 't';
-use TestServer;
-
-my $server      = TestServer->new;
-my $pid         = $server->background;
-my $server_root = $server->root;
 
 my $mech = Test::WWW::Mechanize->new();
-isa_ok($mech,'Test::WWW::Mechanize');
+isa_ok( $mech,'Test::WWW::Mechanize' );
 
-$mech->get( "$server_root/goodlinks.html" );
+my $uri = URI::file->new_abs( 't/goodlinks.html' )->as_string;
+$mech->get_ok( $uri );
 
 # test regex
 test_out('not ok 1 - page_links_content_like');
@@ -67,4 +64,4 @@ test_diag('goodlinks.html');
 $mech->page_links_content_unlike(qr/Test/,'Checking all page link unlike content failures');
 test_test('Handles link unlike content found');
 
-$server->stop;
+done_testing();
