@@ -1,25 +1,20 @@
-#!perl
+#!perl -Tw
 
 use strict;
 use warnings;
-use Test::More tests => 5;
+use Test::More tests => 7;
 use Test::Builder::Tester;
+use URI::file;
 
 BEGIN {
     use_ok( 'Test::WWW::Mechanize' );
 }
 
-use lib 't';
-use TestServer;
-
-my $server      = TestServer->new;
-my $pid         = $server->background;
-my $server_root = $server->root;
-
 my $mech = Test::WWW::Mechanize->new( autocheck => 0 );
 isa_ok($mech,'Test::WWW::Mechanize');
 
-$mech->get( "$server_root/goodlinks.html" );
+my $uri = URI::file->new_abs( 't/goodlinks.html' )->as_string;
+$mech->get_ok( $uri );
 
 # Good links.
 test_out('ok 1 - Checking all page links successful');
@@ -32,7 +27,8 @@ $mech->page_links_ok();
 test_test('Handles All page links successful - default desc');
 
 # Bad links
-$mech->get( "$server_root/badlinks.html" );
+$uri = URI::file->new_abs( 't/badlinks.html' )->as_string;
+$mech->get_ok( $uri );
 
 test_out('not ok 1 - Checking some page link failures');
 test_fail(+4);
@@ -41,5 +37,3 @@ test_diag('bad2.html');
 test_diag('bad3.html');
 $mech->page_links_ok('Checking some page link failures');
 test_test('Handles link not found');
-
-$server->stop;
