@@ -22,20 +22,20 @@ isa_ok($mech,'Test::WWW::Mechanize');
 
 my $text = 'This is what we are putting';
 GOOD_PUT: {
-    my $goodlinks = "$server_root/goodlinks.html";
+    my $scratch = "$server_root/scratch.html";
 
-    $mech->put_ok($goodlinks, {content => $text});
-    ok($mech->success, 'sanity check: we can load goodlinks.html');
+    $mech->put_ok($scratch, {content => $text});
+    ok($mech->success, 'sanity check: we can load scratch.html');
 
-    test_out('ok 1 - Try to PUT goodlinks.html');
-    my $ok = $mech->put_ok($goodlinks, 'Try to PUT goodlinks.html');
+    test_out('ok 1 - Try to PUT scratch.html');
+    my $ok = $mech->put_ok($scratch, 'Try to PUT scratch.html');
     test_test('PUTs existing URI and reports success');
     is( ref($ok), '', 'put_ok() should only return a scalar' );
     ok( $ok, 'And the result should be true' );
 
     # default desc
-    test_out("ok 1 - PUT $goodlinks");
-    $mech->put_ok($goodlinks);
+    test_out("ok 1 - PUT $scratch");
+    $mech->put_ok($scratch);
     test_test('PUTs existing URI and reports success - default desc');
 }
 
