@@ -1,25 +1,20 @@
-#!perl -w
+#!perl -Tw
 
 use strict;
 use warnings;
-use Test::More tests => 5;
+use Test::More tests => 6;
 use Test::Builder::Tester;
+use URI::file;
 
 BEGIN {
     use_ok( 'Test::WWW::Mechanize' );
 }
 
-use lib 't';
-use TestServer;
+my $mech = Test::WWW::Mechanize->new();
+isa_ok( $mech,'Test::WWW::Mechanize' );
 
-my $server      = TestServer->new;
-my $pid         = $server->background;
-my $server_root = $server->root;
-
-my $mech=Test::WWW::Mechanize->new();
-isa_ok($mech,'Test::WWW::Mechanize');
-
-$mech->get( "$server_root/goodlinks.html" );
+my $uri = URI::file->new_abs( 't/goodlinks.html' )->as_string;
+$mech->get_ok( $uri );
 
 # test regex
 test_out( 'ok 1 - Does it say test page?' );
@@ -35,11 +30,9 @@ test_test( 'Finds the contains - default desc' );
 # found in content_contains() but NOT in text_contains().
 test_out( 'not ok 1 - Trying to find goodlinks' );
 test_fail(+5);
-test_diag(q(    searched: "Test PageTest PageTest 1 Test 2 Test 3") );
-test_diag(q(  can't find: "goodlinks.html") );
-test_diag(q(        LCSS: "s"));
-test_diag(q(LCSS context: "Test PageTest PageTest 1 Test 2 Test 3"));
+test_diag( q{    searched: "Test PageTest PageTest 1 Test 2 Test 3"} );
+test_diag( q{  can't find: "goodlinks.html"} );
+test_diag( q{        LCSS: "s"} );
+test_diag( q{LCSS context: "Test PageTest PageTest 1 Test 2 Test 3"} );
 $mech->text_contains( 'goodlinks.html', 'Trying to find goodlinks' );
 test_test( 'Handles not finding it' );
-
-$server->stop;
