@@ -15,6 +15,11 @@ Added $mech->grep_inputs() and $mech->grep_submits() to easily pull
 input fields from the page.  I'd like to get this moved up to base
 WWW::Mechanize, because it has use outside of the Test:: world.
 
+$mech->followable_links() now finds file: URLs, too.
+
+[INTERNALS]
+Most tests no longer use TestServer.pm class.
+
 
 1.32    Wed May 11 10:12:25 CDT 2011
 ------------------------------------
